tests/errors/underscore-use.fut
-- You may not use variables prefixed with underscore.
--
-- ==
-- error: underscore

let main (_x: i32): i32 =
  _x